# IoT-MQTT

./: .gitignore  CMakeLists.txt  CMakePresets.json  Untitled Diagram.drawio  conanfile.txt  design.drawio
.devcontainer/: Dockerfile  devcontainer.json
protos/: sensor.proto
src/: CMakeLists.txt  LightSensor.cpp  LightSensor.h  MQTTCallback.cpp  MQTTCallback.h  RestApi.cpp  RestApi.h  Sensor.cpp  Sensor.h  SensorData.h  SensorsController.cpp  SensorsController.h  TemperatureSensor.cpp  TemperatureSensor.h  gRPCClient.cpp  gRPCClient.h  gRPCServer.cpp  gRPCServer.h  main.cpp
test/: CMakeLists.txt  Iot-MQTT_test.cpp
